feat: Uitgebreide vertalingen toegevoegd
- Settings pagina tabs nu vertaald
- ThemeSelector component vertaald
- NotificationGroupsTab, NotificationSchedulesTab vertaald
- SendUserNotificationTab, SentNotificationsTab vertaald
- PWA componenten (InstallPrompt, UpdatePrompt, PushNotification) vertaald
- Pagination component vertaald
- Uitgebreide translation keys voor:
  - dashboard (hoursWeek, registerHoursAction, newPlanningAction, etc.)
  - companies (contact, location)
  - notifications (groups, schedules, send, sent, etc.)
  - revenue (perWeek, perMonth, totalIncome, totalExpenses, profit, etc.)
  - imports (statusPending, processingInvoice, dragInvoice, etc.)
  - documents (uploadViewSign, uploadToStart)
  - activity (systemOverview, loginLogout)
  - settings (colorTheme, chooseColorCombination, sidebar, primary, etc.)
  - pwa (nieuwe sectie met 35+ keys)
  - common (expired, firstPage, previousPage, etc.)
- vite.config.ts: maximumFileSizeToCacheInBytes verhoogd naar 3MB

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -93,6 +93,13 @@
     "manage": "Manage here",
     "selectAll": "Select all",
     "deselectAll": "Deselect all",
+    "expired": "Expired",
+    "show": "Show",
+    "perPage": "per page",
+    "firstPage": "First page",
+    "previousPage": "Previous page",
+    "nextPage": "Next page",
+    "lastPage": "Last page",
     "months": {
       "january": "January",
       "february": "February",
@@ -162,6 +169,7 @@
     "title": "Dashboard",
     "welcome": "Welcome back",
     "welcomeDriver": "Welcome back, {{name}}!",
+    "overview": "Overview of your business",
     "manageHours": "Manage your time entries and view your planning here.",
     "recentActivity": "Recent activity",
     "quickActions": "Quick actions",
@@ -186,8 +194,18 @@
     "weeklyOverview": "Weekly overview",
     "submittedThisWeek": "Submitted this week",
     "hoursLogged": "Hours logged",
+    "hoursWeek": "Hours week",
     "tip": "Tip",
-    "tipText": "Submit your hours at the end of the week to ensure everything is processed correctly."
+    "tipText": "Submit your hours at the end of the week to ensure everything is processed correctly.",
+    "registerHoursAction": "Register hours",
+    "requestLeaveAction": "Request leave",
+    "newPlanningAction": "New planning",
+    "createInvoiceAction": "Create invoice",
+    "by": "by",
+    "justNow": "Just now",
+    "minutesAgo": "{{count}} minutes ago",
+    "hoursAgo": "{{count}} hours ago",
+    "daysAgo": "{{count}} days ago"
   },
   "companies": {
     "title": "Companies",
@@ -196,6 +214,8 @@
     "editCompany": "Edit company",
     "companyName": "Company name",
     "contactPerson": "Contact person",
+    "contact": "Contact",
+    "location": "Location",
     "kvkNumber": "Chamber of Commerce number",
     "vatNumber": "VAT number",
     "iban": "IBAN",
@@ -696,6 +716,8 @@
     "title": "Settings",
     "general": "General",
     "appearance": "Appearance",
+    "branding": "Branding",
+    "theme": "Theme",
     "appName": "Application name",
     "logo": "Logo",
     "favicon": "Favicon",
@@ -714,6 +736,7 @@
     "invoiceSettings": "Invoice settings",
     "emailSettings": "Email settings",
     "notificationSettings": "Notification settings",
+    "aiExtraction": "AI Extraction",
     "fonts": "Fonts",
     "fontManagement": "Font management",
     "leaveSettings": "Leave settings",
@@ -736,7 +759,21 @@
     "serverResponseError": "Server responded with status {{status}}",
     "localDevelopment": "Local Development",
     "localDevMode": "Use local dev mode (localhost:8000)",
-    "askAdminForUrl": "Ask your administrator for the server URL"
+    "askAdminForUrl": "Ask your administrator for the server URL",
+    "colorTheme": "Color Theme",
+    "chooseColorCombination": "Choose a color combination for the application.",
+    "standard": "Standard (Blue)",
+    "emerald": "Emerald (Green)",
+    "violet": "Violet (Purple)",
+    "amber": "Amber (Orange)",
+    "rose": "Rose",
+    "cyan": "Cyan (Turquoise)",
+    "slate": "Slate (Dark)",
+    "darkMode": "Dark Mode",
+    "sidebar": "Sidebar",
+    "primary": "Primary",
+    "background": "Background",
+    "accent": "Accent"
   },
   "notifications": {
     "title": "Notifications",
@@ -754,17 +791,150 @@
     "allUsers": "All users",
     "selectUsers": "Select users",
     "message": "Message",
-    "notificationSent": "Notification sent"
+    "notificationSent": "Notification sent",
+    "groups": "Groups",
+    "schedules": "Schedules",
+    "send": "Send",
+    "sent": "Sent",
+    "manageDescription": "Manage notification groups, schedules and send messages.",
+    "notificationGroups": "Notification Groups",
+    "createGroupDescription": "Create groups of users to send notifications to.",
+    "noGroups": "No groups",
+    "createGroupPrompt": "Create a new group to start with group notifications.",
+    "newGroup": "New Group",
+    "loadGroupsError": "Could not load groups",
+    "groupCreated": "Group created",
+    "groupCreateError": "Could not create group",
+    "groupUpdated": "Group updated",
+    "groupUpdateError": "Could not update group",
+    "groupDeleted": "Group deleted",
+    "groupDeleteError": "Could not delete group",
+    "memberAddError": "Could not add member",
+    "memberRemoveError": "Could not remove member",
+    "notificationSentToDevices": "Notification sent to {{count}} devices",
+    "sendError": "Could not send notification",
+    "loadGroupDetailsError": "Could not load group details",
+    "membersCount": "{{count}} members",
+    "schedulesCount": "{{count}} schedules",
+    "manageMembers": "Manage members",
+    "membersOf": "Members of {{name}}",
+    "searchUsers": "Search users...",
+    "currentMembers": "Current Members ({{count}})",
+    "noMembers": "No members",
+    "availableUsers": "Available Users ({{count}})",
+    "noUsersAvailable": "No users available",
+    "done": "Done",
+    "notificationTo": "Notification to {{name}}",
+    "sendToMembers": "Send to {{count}} members",
+    "notificationTitle": "Title",
+    "notificationTitlePlaceholder": "Notification title",
+    "messagePlaceholder": "Notification message",
+    "linkOptional": "Link (optional)",
+    "deleteGroup": "Delete Group",
+    "deleteGroupConfirm": "Are you sure you want to delete the group <1>{{name}}</1>? This will also delete all associated schedules.",
+    "editGroup": "Edit Group",
+    "newNotificationGroup": "New Notification Group",
+    "groupNamePlaceholder": "e.g. All Drivers",
+    "optionalDescription": "Optional description...",
+    "loadSchedulesError": "Could not load schedules",
+    "scheduleCreated": "Schedule created",
+    "scheduleCreateError": "Could not create schedule",
+    "scheduleUpdated": "Schedule updated",
+    "scheduleUpdateError": "Could not update schedule",
+    "scheduleDeleted": "Schedule deleted",
+    "scheduleDeleteError": "Could not delete schedule",
+    "notificationSchedules": "Notification Schedules",
+    "scheduleDescription": "Plan automatic notifications for groups",
+    "newSchedule": "New Schedule",
+    "createGroupFirst": "Create a notification group first before you can create schedules.",
+    "noSchedules": "No schedules",
+    "createSchedulePrompt": "Create a new schedule to plan automatic notifications.",
+    "next": "Next",
+    "last": "Last",
+    "sendNow": "Send now",
+    "editSchedule": "Edit Schedule",
+    "newNotificationSchedule": "New Notification Schedule",
+    "scheduleName": "Schedule Name",
+    "scheduleNamePlaceholder": "e.g. Daily Update",
+    "group": "Group",
+    "selectGroup": "Select a group...",
+    "scheduling": "Scheduling",
+    "frequency": "Frequency",
+    "time": "Time",
+    "dayOfWeek": "Day of the week",
+    "selectDay": "Select a day...",
+    "selectDays": "Select days",
+    "notificationContent": "Notification Content",
+    "scheduleActive": "Schedule active",
+    "inactiveScheduleNote": "Inactive schedules are not sent automatically",
+    "deleteSchedule": "Delete Schedule",
+    "deleteScheduleConfirm": "Are you sure you want to delete the schedule <1>{{name}}</1>?",
+    "loadUsersError": "Could not load users",
+    "selectUserError": "Select a user",
+    "titleRequiredError": "Enter a title",
+    "messageRequiredError": "Enter a message",
+    "notificationSentToUser": "Notification sent to {{name}} ({{count}} device)",
+    "notificationFailedUser": "Notification could not be sent. {{name}} may not have push notifications enabled.",
+    "noDevicesRegistered": "{{name}} has no registered devices for push notifications.",
+    "sendPushNotification": "Send Push Notification",
+    "sendToUserDescription": "Send a push notification to a specific user/driver.",
+    "selectUser": "Select User",
+    "searchByNameOrEmail": "Search by name or email...",
+    "noUsersFound": "No users found.",
+    "selected": "Selected",
+    "titlePlaceholder": "E.g.: New trip assigned",
+    "messagePlaceholderUser": "E.g.: You have a new trip for tomorrow at 09:00",
+    "characters": "characters",
+    "link": "Link",
+    "linkDescription": "User will be redirected to this link when clicking the notification",
+    "confirmSend": "Are you sure you want to send this notification?",
+    "recipient": "Recipient",
+    "loadSentError": "Could not load sent notifications",
+    "loadDetailsError": "Could not load details",
+    "deleteNotificationsError": "Could not delete notifications",
+    "clearOldError": "Could not delete old notifications",
+    "sentNotifications": "Sent Notifications",
+    "sentDescription": "Overview of all sent notifications with read receipts",
+    "cleanup": "Cleanup",
+    "allGroups": "All groups",
+    "fromDate": "From date",
+    "toDate": "To date",
+    "clearFilters": "Clear filters",
+    "noNotificationsSent": "No notifications sent",
+    "noNotificationsWithFilters": "No notifications found with these filters",
+    "noNotificationsSentYet": "No notifications have been sent yet",
+    "notification": "Notification",
+    "read": "Read",
+    "everyone": "Everyone",
+    "sentBy": "Sent by",
+    "system": "System",
+    "viewReadReceipts": "View all read receipts",
+    "unread": "Unread",
+    "readReceipts": "Read Receipts",
+    "user": "User",
+    "readAt": "Read at",
+    "noReadReceipts": "No read receipts available",
+    "deleteNotifications": "Delete Notifications",
+    "deleteNotificationsConfirm": "Are you sure you want to delete {{count}} notification(s)? This will also delete all associated read receipts.",
+    "cannotBeUndone": "This action cannot be undone.",
+    "cleanupOldNotifications": "Cleanup Old Notifications",
+    "cleanupDescription": "Delete all notifications older than the specified number of days.",
+    "deleteOlderThan": "Delete notifications older than",
+    "days": "days",
+    "cleanupWarning": "This will also delete all associated read receipts. This action cannot be undone.",
+    "cleaning": "Cleaning up..."
   },
   "activity": {
     "title": "Activities",
     "recentActivity": "Recent activity",
     "allActivity": "All activities",
+    "systemOverview": "Overview of all activities in the system",
     "created": "Created",
     "updated": "Updated",
     "deleted": "Deleted",
     "login": "Logged in",
     "logout": "Logged out",
+    "loginLogout": "Login/Logout",
     "submitted": "Submitted",
     "approved": "Approved",
     "rejected": "Rejected",
@@ -773,7 +943,9 @@
     "filterByType": "Filter by type",
     "filterByAction": "Filter by action",
     "allActions": "All actions",
-    "noActivity": "No activities found"
+    "noActivity": "No activities found",
+    "activities": "activities",
+    "pageOf": "Page {{page}} of {{total}}"
   },
   "documents": {
     "title": "Documents",
@@ -802,14 +974,16 @@
     "requiresSignature": "Requires signature",
     "selectFile": "Select file",
     "dragAndDrop": "Drag and drop file here or click to select",
-    "maxFileSize": "Maximum file size: {{size}}MB"
+    "maxFileSize": "Maximum file size: {{size}}MB",
+    "uploadViewSign": "Upload, view and sign PDF documents",
+    "uploadToStart": "Upload a PDF document to get started"
   },
   "revenue": {
     "title": "Revenue",
     "totalRevenue": "Total revenue",
     "monthlyRevenue": "Monthly revenue",
     "yearlyRevenue": "Yearly revenue",
-    "revenueOverview": "Revenue overview",
+    "revenueOverview": "Income, expenses and profit overview",
     "revenueByCompany": "Revenue by company",
     "revenueByMonth": "Revenue by month",
     "invoiced": "Invoiced",
@@ -822,7 +996,21 @@
     "customPeriod": "Custom period",
     "exportReport": "Export report",
     "chart": "Chart",
-    "table": "Table"
+    "table": "Table",
+    "perWeek": "Per Week",
+    "perMonth": "Per Month",
+    "perQuarter": "Per Quarter",
+    "perYear": "Per Year",
+    "totalIncome": "Total Income",
+    "totalExpenses": "Total Expenses",
+    "profit": "Profit",
+    "avg": "Avg.",
+    "quarter": "quarter",
+    "profitMargin": "Profit margin",
+    "income": "Income",
+    "expenses": "Expenses",
+    "profitOverview": "Profit Overview",
+    "loadError": "Failed to load revenue data"
   },
   "imports": {
     "title": "Import",
@@ -850,7 +1038,35 @@
     "connectionSuccess": "Connection successful",
     "connectionFailed": "Connection failed",
     "syncEmails": "Sync emails",
-    "lastSync": "Last sync"
+    "lastSync": "Last sync",
+    "invoiceImportDescription": "Upload purchase invoices to automatically extract data with OCR",
+    "statusPending": "Queued",
+    "statusProcessing": "Processing",
+    "statusExtracted": "Extracted",
+    "statusReviewNeeded": "Review needed",
+    "statusCompleted": "Completed",
+    "statusFailed": "Failed",
+    "uploadError": "Something went wrong during upload",
+    "deleteError": "Error deleting: {{error}}",
+    "convertError": "Error converting: {{error}}",
+    "bulkDeleteImportConfirm": "Are you sure you want to delete {{count}} import(s)?",
+    "purchaseInvoices": "purchase invoices",
+    "salesInvoices": "sales invoices",
+    "creditNotes": "credit notes",
+    "bulkConvertConfirm": "Are you sure you want to convert {{count}} import(s) to {{type}}?",
+    "processingInvoice": "Invoice is being processed...",
+    "ocrProcessing": "OCR recognition may take a moment",
+    "dropToUpload": "Drop to upload",
+    "dragInvoice": "Drag an invoice here",
+    "clickToSelect": "or click to select a file",
+    "allowedFormats": "PDF, JPG, PNG or TIFF (max. 20MB)",
+    "uploadFailed": "Upload failed",
+    "recentImports": "Recent Imports",
+    "noImports": "No invoices imported yet",
+    "purchaseInvoice": "Purchase invoice",
+    "salesInvoice": "Sales invoice",
+    "creditNote": "Credit note",
+    "saveAsInvoice": "Save as invoice"
   },
   "profile": {
     "title": "Profile",
@@ -936,5 +1152,43 @@
     "logout": "Are you sure you want to logout?",
     "submit": "Are you sure you want to submit?",
     "unsavedChanges": "You have unsaved changes. Do you want to leave the page?"
+  },
+  "pwa": {
+    "pushNotifications": "Push Notifications",
+    "pushNotificationsUnavailable": "Push notifications unavailable",
+    "browserNotSupported": "Your browser or device does not support push notifications.",
+    "pushNotConfigured": "Push notifications have not been configured by the administrator yet.",
+    "notificationsBlocked": "Notifications blocked",
+    "notificationsBlockedDescription": "You have blocked notifications. Change this in your browser settings to receive push notifications.",
+    "receivingNotifications": "You are receiving push notifications on this device.",
+    "receiveNotificationsDescription": "Receive notifications about important updates, even when the app is not open.",
+    "deviceNameOptional": "Device name (optional)",
+    "subscribedToNotifications": "You are subscribed to notifications on this device.",
+    "enable": "Enable",
+    "pushNotificationsActive": "Push notifications are active",
+    "enablePushNotifications": "Enable push notifications",
+    "enableToStayInformed": "Enable push notifications to stay informed about:",
+    "newTripsAndChanges": "New trips and changes",
+    "importantAnnouncements": "Important announcements",
+    "planningUpdates": "Planning updates",
+    "important": "Important",
+    "mayMissUpdates": "Without notifications you may miss crucial updates about your trips.",
+    "notificationsEnabled": "Notifications enabled!",
+    "willReceiveUpdates": "You will now receive notifications for important updates.",
+    "couldNotEnableNotifications": "Could not enable notifications. Please try again.",
+    "notificationsBlockedBrowser": "Notifications are blocked. Go to your browser settings to change this.",
+    "enabling": "Enabling...",
+    "yesEnable": "Yes, enable",
+    "remindLater": "Remind me later",
+    "installApp": "Install TMS App",
+    "iosTapOn": "Tap on",
+    "iosAddToHomeScreen": "and then \"Add to Home Screen\" to use TMS as an app.",
+    "installDescription": "Install TMS on your device for quick access and offline use.",
+    "install": "Install",
+    "updateAvailable": "Update available",
+    "newVersionLoading": "New version is loading...",
+    "newVersionAvailable": "A new version of TMS is available. Reload to use the latest version.",
+    "updateNow": "Update now",
+    "later": "Later"
   }
 }
