--- a/frontend/src/i18n/locales/nl.json
+++ b/frontend/src/i18n/locales/nl.json
@@ -93,6 +93,13 @@
     "manage": "Beheer hier",
     "selectAll": "Alles selecteren",
     "deselectAll": "Alles deselecteren",
+    "expired": "Verlopen",
+    "show": "Toon",
+    "perPage": "per pagina",
+    "firstPage": "Eerste pagina",
+    "previousPage": "Vorige pagina",
+    "nextPage": "Volgende pagina",
+    "lastPage": "Laatste pagina",
     "months": {
       "january": "Januari",
       "february": "Februari",
@@ -162,6 +169,7 @@
     "title": "Dashboard",
     "welcome": "Welkom terug",
     "welcomeDriver": "Welkom terug, {{name}}!",
+    "overview": "Overzicht van je bedrijf",
     "manageHours": "Beheer hier je urenregistraties en bekijk je planning.",
     "recentActivity": "Recente activiteit",
     "quickActions": "Snelle acties",
@@ -186,8 +194,18 @@
     "weeklyOverview": "Weekoverzicht",
     "submittedThisWeek": "Ingediend deze week",
     "hoursLogged": "Uren geregistreerd",
+    "hoursWeek": "Uren week",
     "tip": "Tip",
-    "tipText": "Dien je uren aan het einde van de week in om ervoor te zorgen dat alles correct wordt verwerkt."
+    "tipText": "Dien je uren aan het einde van de week in om ervoor te zorgen dat alles correct wordt verwerkt.",
+    "registerHoursAction": "Uren registreren",
+    "requestLeaveAction": "Verlof aanvragen",
+    "newPlanningAction": "Nieuwe planning",
+    "createInvoiceAction": "Factuur aanmaken",
+    "by": "door",
+    "justNow": "Zojuist",
+    "minutesAgo": "{{count}} minuten geleden",
+    "hoursAgo": "{{count}} uur geleden",
+    "daysAgo": "{{count}} dagen geleden"
   },
   "companies": {
     "title": "Bedrijven",
@@ -196,6 +214,8 @@
     "editCompany": "Bedrijf bewerken",
     "companyName": "Bedrijfsnaam",
     "contactPerson": "Contactpersoon",
+    "contact": "Contact",
+    "location": "Locatie",
     "kvkNumber": "KvK-nummer",
     "vatNumber": "BTW-nummer",
     "iban": "IBAN",
@@ -696,6 +716,8 @@
     "title": "Instellingen",
     "general": "Algemeen",
     "appearance": "Weergave",
+    "branding": "Branding",
+    "theme": "Thema",
     "appName": "Applicatienaam",
     "logo": "Logo",
     "favicon": "Favicon",
@@ -714,6 +736,7 @@
     "invoiceSettings": "Factuur instellingen",
     "emailSettings": "E-mail instellingen",
     "notificationSettings": "Notificatie instellingen",
+    "aiExtraction": "AI Extractie",
     "fonts": "Lettertypen",
     "fontManagement": "Lettertypebeheer",
     "leaveSettings": "Verlof instellingen",
@@ -736,7 +759,21 @@
     "serverResponseError": "Server antwoordde met status {{status}}",
     "localDevelopment": "Lokale Ontwikkeling",
     "localDevMode": "Lokale dev-modus gebruiken (localhost:8000)",
-    "askAdminForUrl": "Vraag je administrator om de server URL"
+    "askAdminForUrl": "Vraag je administrator om de server URL",
+    "colorTheme": "Kleurthema",
+    "chooseColorCombination": "Kies een kleurencombinatie voor de applicatie.",
+    "standard": "Standaard (Blauw)",
+    "emerald": "Smaragd (Groen)",
+    "violet": "Violet (Paars)",
+    "amber": "Amber (Oranje)",
+    "rose": "Roze",
+    "cyan": "Cyaan (Turquoise)",
+    "slate": "Leisteen (Donker)",
+    "darkMode": "Donker Modus",
+    "sidebar": "Sidebar",
+    "primary": "Primair",
+    "background": "Achtergrond",
+    "accent": "Accent"
   },
   "notifications": {
     "title": "Notificaties",
@@ -754,17 +791,150 @@
     "allUsers": "Alle gebruikers",
     "selectUsers": "Selecteer gebruikers",
     "message": "Bericht",
-    "notificationSent": "Notificatie verstuurd"
+    "notificationSent": "Notificatie verstuurd",
+    "groups": "Groepen",
+    "schedules": "Schema's",
+    "send": "Versturen",
+    "sent": "Verzonden",
+    "manageDescription": "Beheer notificatie groepen, schema's en verstuur berichten.",
+    "notificationGroups": "Notificatie Groepen",
+    "createGroupDescription": "Maak groepen van gebruikers om notificaties naar te sturen.",
+    "noGroups": "Geen groepen",
+    "createGroupPrompt": "Maak een nieuwe groep om te beginnen met groepsnotificaties.",
+    "newGroup": "Nieuwe Groep",
+    "loadGroupsError": "Kon groepen niet laden",
+    "groupCreated": "Groep aangemaakt",
+    "groupCreateError": "Kon groep niet aanmaken",
+    "groupUpdated": "Groep bijgewerkt",
+    "groupUpdateError": "Kon groep niet bijwerken",
+    "groupDeleted": "Groep verwijderd",
+    "groupDeleteError": "Kon groep niet verwijderen",
+    "memberAddError": "Kon lid niet toevoegen",
+    "memberRemoveError": "Kon lid niet verwijderen",
+    "notificationSentToDevices": "Notificatie verzonden naar {{count}} apparaten",
+    "sendError": "Kon notificatie niet verzenden",
+    "loadGroupDetailsError": "Kon groep details niet laden",
+    "membersCount": "{{count}} leden",
+    "schedulesCount": "{{count}} schema's",
+    "manageMembers": "Leden beheren",
+    "membersOf": "Leden van {{name}}",
+    "searchUsers": "Zoek gebruikers...",
+    "currentMembers": "Huidige Leden ({{count}})",
+    "noMembers": "Geen leden",
+    "availableUsers": "Beschikbare Gebruikers ({{count}})",
+    "noUsersAvailable": "Geen gebruikers beschikbaar",
+    "done": "Klaar",
+    "notificationTo": "Notificatie naar {{name}}",
+    "sendToMembers": "Verstuur naar {{count}} leden",
+    "notificationTitle": "Titel",
+    "notificationTitlePlaceholder": "Notificatie titel",
+    "messagePlaceholder": "Notificatie bericht",
+    "linkOptional": "Link (optioneel)",
+    "deleteGroup": "Groep Verwijderen",
+    "deleteGroupConfirm": "Weet je zeker dat je de groep <1>{{name}}</1> wilt verwijderen? Dit verwijdert ook alle bijbehorende schema's.",
+    "editGroup": "Groep Bewerken",
+    "newNotificationGroup": "Nieuwe Notificatie Groep",
+    "groupNamePlaceholder": "bijv. Alle Chauffeurs",
+    "optionalDescription": "Optionele beschrijving...",
+    "loadSchedulesError": "Kon schema's niet laden",
+    "scheduleCreated": "Schema aangemaakt",
+    "scheduleCreateError": "Kon schema niet aanmaken",
+    "scheduleUpdated": "Schema bijgewerkt",
+    "scheduleUpdateError": "Kon schema niet bijwerken",
+    "scheduleDeleted": "Schema verwijderd",
+    "scheduleDeleteError": "Kon schema niet verwijderen",
+    "notificationSchedules": "Notificatie Schema's",
+    "scheduleDescription": "Plan automatische notificaties voor groepen",
+    "newSchedule": "Nieuw Schema",
+    "createGroupFirst": "Maak eerst een notificatie groep aan voordat je schema's kunt maken.",
+    "noSchedules": "Geen schema's",
+    "createSchedulePrompt": "Maak een nieuw schema om automatische notificaties te plannen.",
+    "next": "Volgende",
+    "last": "Laatst",
+    "sendNow": "Nu versturen",
+    "editSchedule": "Schema Bewerken",
+    "newNotificationSchedule": "Nieuw Notificatie Schema",
+    "scheduleName": "Schema Naam",
+    "scheduleNamePlaceholder": "bijv. Dagelijkse Update",
+    "group": "Groep",
+    "selectGroup": "Selecteer een groep...",
+    "scheduling": "Planning",
+    "frequency": "Frequentie",
+    "time": "Tijdstip",
+    "dayOfWeek": "Dag van de week",
+    "selectDay": "Selecteer een dag...",
+    "selectDays": "Selecteer dagen",
+    "notificationContent": "Notificatie Inhoud",
+    "scheduleActive": "Schema actief",
+    "inactiveScheduleNote": "Inactieve schema's worden niet automatisch verzonden",
+    "deleteSchedule": "Schema Verwijderen",
+    "deleteScheduleConfirm": "Weet je zeker dat je het schema <1>{{name}}</1> wilt verwijderen?",
+    "loadUsersError": "Kon gebruikers niet laden",
+    "selectUserError": "Selecteer een gebruiker",
+    "titleRequiredError": "Vul een titel in",
+    "messageRequiredError": "Vul een bericht in",
+    "notificationSentToUser": "Notificatie verzonden naar {{name}} ({{count}} apparaat)",
+    "notificationFailedUser": "Notificatie kon niet worden verzonden. {{name}} heeft mogelijk geen push notificaties ingeschakeld.",
+    "noDevicesRegistered": "{{name}} heeft geen geregistreerde apparaten voor push notificaties.",
+    "sendPushNotification": "Stuur Push Notificatie",
+    "sendToUserDescription": "Verstuur een push notificatie naar een specifieke gebruiker/chauffeur.",
+    "selectUser": "Selecteer Gebruiker",
+    "searchByNameOrEmail": "Zoek op naam of e-mail...",
+    "noUsersFound": "Geen gebruikers gevonden.",
+    "selected": "Geselecteerd",
+    "titlePlaceholder": "Bijv: Nieuwe rit toegewezen",
+    "messagePlaceholderUser": "Bijv: Je hebt een nieuwe rit voor morgen om 09:00",
+    "characters": "tekens",
+    "link": "Link",
+    "linkDescription": "Gebruiker wordt naar deze link gestuurd bij klikken op de notificatie",
+    "confirmSend": "Weet je zeker dat je deze notificatie wilt versturen?",
+    "recipient": "Ontvanger",
+    "loadSentError": "Kon verzonden notificaties niet laden",
+    "loadDetailsError": "Kon details niet laden",
+    "deleteNotificationsError": "Kon notificaties niet verwijderen",
+    "clearOldError": "Kon oude notificaties niet verwijderen",
+    "sentNotifications": "Verzonden Notificaties",
+    "sentDescription": "Overzicht van alle verzonden notificaties met leesbevestigingen",
+    "cleanup": "Opschonen",
+    "allGroups": "Alle groepen",
+    "fromDate": "Vanaf datum",
+    "toDate": "Tot datum",
+    "clearFilters": "Filters wissen",
+    "noNotificationsSent": "Geen notificaties verzonden",
+    "noNotificationsWithFilters": "Geen notificaties gevonden met deze filters",
+    "noNotificationsSentYet": "Er zijn nog geen notificaties verzonden",
+    "notification": "Notificatie",
+    "read": "Gelezen",
+    "everyone": "Iedereen",
+    "sentBy": "Verzonden door",
+    "system": "Systeem",
+    "viewReadReceipts": "Bekijk alle leesbevestigingen",
+    "unread": "Ongelezen",
+    "readReceipts": "Leesbevestigingen",
+    "user": "Gebruiker",
+    "readAt": "Gelezen op",
+    "noReadReceipts": "Geen leesbevestigingen beschikbaar",
+    "deleteNotifications": "Notificaties Verwijderen",
+    "deleteNotificationsConfirm": "Weet je zeker dat je {{count}} notificatie(s) wilt verwijderen? Dit verwijdert ook alle bijbehorende leesbevestigingen.",
+    "cannotBeUndone": "Deze actie kan niet ongedaan worden gemaakt.",
+    "cleanupOldNotifications": "Oude Notificaties Opschonen",
+    "cleanupDescription": "Verwijder alle notificaties die ouder zijn dan het opgegeven aantal dagen.",
+    "deleteOlderThan": "Verwijder notificaties ouder dan",
+    "days": "dagen",
+    "cleanupWarning": "Dit verwijdert ook alle bijbehorende leesbevestigingen. Deze actie kan niet ongedaan worden gemaakt.",
+    "cleaning": "Opschonen..."
   },
   "activity": {
     "title": "Activiteiten",
     "recentActivity": "Recente activiteit",
     "allActivity": "Alle activiteiten",
+    "systemOverview": "Overzicht van alle activiteiten in het systeem",
     "created": "Aangemaakt",
     "updated": "Bijgewerkt",
     "deleted": "Verwijderd",
     "login": "Ingelogd",
     "logout": "Uitgelogd",
+    "loginLogout": "Login/Logout",
     "submitted": "Ingediend",
     "approved": "Goedgekeurd",
     "rejected": "Afgewezen",
@@ -773,7 +943,9 @@
     "filterByType": "Filter op type",
     "filterByAction": "Filter op actie",
     "allActions": "Alle acties",
-    "noActivity": "Geen activiteiten gevonden"
+    "noActivity": "Geen activiteiten gevonden",
+    "activities": "activiteiten",
+    "pageOf": "Pagina {{page}} van {{total}}"
   },
   "documents": {
     "title": "Documenten",
@@ -802,14 +974,16 @@
     "requiresSignature": "Vereist handtekening",
     "selectFile": "Selecteer bestand",
     "dragAndDrop": "Sleep bestand hierheen of klik om te selecteren",
-    "maxFileSize": "Maximale bestandsgrootte: {{size}}MB"
+    "maxFileSize": "Maximale bestandsgrootte: {{size}}MB",
+    "uploadViewSign": "Upload, bekijk en onderteken PDF documenten",
+    "uploadToStart": "Upload een PDF document om te beginnen"
   },
   "revenue": {
     "title": "Omzet",
     "totalRevenue": "Totale omzet",
     "monthlyRevenue": "Maandelijkse omzet",
     "yearlyRevenue": "Jaarlijkse omzet",
-    "revenueOverview": "Omzetoverzicht",
+    "revenueOverview": "Inkomsten, uitgaven en winst overzicht",
     "revenueByCompany": "Omzet per bedrijf",
     "revenueByMonth": "Omzet per maand",
     "invoiced": "Gefactureerd",
@@ -822,7 +996,21 @@
     "customPeriod": "Aangepaste periode",
     "exportReport": "Exporteer rapport",
     "chart": "Grafiek",
-    "table": "Tabel"
+    "table": "Tabel",
+    "perWeek": "Per Week",
+    "perMonth": "Per Maand",
+    "perQuarter": "Per Kwartaal",
+    "perYear": "Per Jaar",
+    "totalIncome": "Totale Inkomsten",
+    "totalExpenses": "Totale Uitgaven",
+    "profit": "Winst",
+    "avg": "Gem.",
+    "quarter": "kwartaal",
+    "profitMargin": "Winstmarge",
+    "income": "Inkomsten",
+    "expenses": "Uitgaven",
+    "profitOverview": "Winst Overzicht",
+    "loadError": "Kon omzetgegevens niet laden"
   },
   "imports": {
     "title": "Import",
@@ -850,7 +1038,35 @@
     "connectionSuccess": "Verbinding succesvol",
     "connectionFailed": "Verbinding mislukt",
     "syncEmails": "E-mails synchroniseren",
-    "lastSync": "Laatste synchronisatie"
+    "lastSync": "Laatste synchronisatie",
+    "invoiceImportDescription": "Upload inkoopfacturen om automatisch gegevens te extraheren met OCR",
+    "statusPending": "In wachtrij",
+    "statusProcessing": "Verwerken",
+    "statusExtracted": "Geëxtraheerd",
+    "statusReviewNeeded": "Review nodig",
+    "statusCompleted": "Voltooid",
+    "statusFailed": "Mislukt",
+    "uploadError": "Er ging iets mis bij het uploaden",
+    "deleteError": "Fout bij verwijderen: {{error}}",
+    "convertError": "Fout bij omzetten: {{error}}",
+    "bulkDeleteImportConfirm": "Weet je zeker dat je {{count}} import(s) wilt verwijderen?",
+    "purchaseInvoices": "inkoopfacturen",
+    "salesInvoices": "verkoopfacturen",
+    "creditNotes": "creditnota's",
+    "bulkConvertConfirm": "Weet je zeker dat je {{count}} import(s) wilt omzetten naar {{type}}?",
+    "processingInvoice": "Factuur wordt verwerkt...",
+    "ocrProcessing": "OCR herkenning kan even duren",
+    "dropToUpload": "Laat los om te uploaden",
+    "dragInvoice": "Sleep een factuur hierheen",
+    "clickToSelect": "of klik om een bestand te selecteren",
+    "allowedFormats": "PDF, JPG, PNG of TIFF (max. 20MB)",
+    "uploadFailed": "Upload mislukt",
+    "recentImports": "Recente Imports",
+    "noImports": "Nog geen facturen geïmporteerd",
+    "purchaseInvoice": "Inkoopfactuur",
+    "salesInvoice": "Verkoopfactuur",
+    "creditNote": "Creditnota",
+    "saveAsInvoice": "Opslaan als factuur"
   },
   "profile": {
     "title": "Profiel",
@@ -936,5 +1152,43 @@
     "logout": "Weet u zeker dat u wilt uitloggen?",
     "submit": "Weet u zeker dat u wilt indienen?",
     "unsavedChanges": "U heeft niet-opgeslagen wijzigingen. Wilt u de pagina verlaten?"
+  },
+  "pwa": {
+    "pushNotifications": "Push Notificaties",
+    "pushNotificationsUnavailable": "Push notificaties niet beschikbaar",
+    "browserNotSupported": "Je browser of apparaat ondersteunt geen push notificaties.",
+    "pushNotConfigured": "Push notificaties zijn nog niet ingesteld door de beheerder.",
+    "notificationsBlocked": "Notificaties geblokkeerd",
+    "notificationsBlockedDescription": "Je hebt notificaties geblokkeerd. Wijzig dit in je browser instellingen om push notificaties te ontvangen.",
+    "receivingNotifications": "Je ontvangt push notificaties op dit apparaat.",
+    "receiveNotificationsDescription": "Ontvang meldingen over belangrijke updates, zelfs als de app niet open is.",
+    "deviceNameOptional": "Apparaat naam (optioneel)",
+    "subscribedToNotifications": "Je bent ingeschreven voor notificaties op dit apparaat.",
+    "enable": "Inschakelen",
+    "pushNotificationsActive": "Push notificaties zijn actief",
+    "enablePushNotifications": "Push notificaties inschakelen",
+    "enableToStayInformed": "Schakel push notificaties in om direct op de hoogte te blijven van:",
+    "newTripsAndChanges": "Nieuwe ritten en wijzigingen",
+    "importantAnnouncements": "Belangrijke mededelingen",
+    "planningUpdates": "Updates van de planning",
+    "important": "Belangrijk",
+    "mayMissUpdates": "Zonder notificaties mis je mogelijk cruciale updates over je ritten.",
+    "notificationsEnabled": "Notificaties ingeschakeld!",
+    "willReceiveUpdates": "Je ontvangt nu meldingen voor belangrijke updates.",
+    "couldNotEnableNotifications": "Kon notificaties niet inschakelen. Probeer het opnieuw.",
+    "notificationsBlockedBrowser": "Notificaties zijn geblokkeerd. Ga naar je browser-instellingen om dit te wijzigen.",
+    "enabling": "Inschakelen...",
+    "yesEnable": "Ja, inschakelen",
+    "remindLater": "Later herinneren",
+    "installApp": "Installeer TMS App",
+    "iosTapOn": "Tik op",
+    "iosAddToHomeScreen": "en dan \"Zet op beginscherm\" om TMS als app te gebruiken.",
+    "installDescription": "Installeer TMS op je apparaat voor snelle toegang en offline gebruik.",
+    "install": "Installeren",
+    "updateAvailable": "Update beschikbaar",
+    "newVersionLoading": "Nieuwe versie wordt geladen...",
+    "newVersionAvailable": "Er is een nieuwe versie van TMS beschikbaar. Herlaad om de nieuwste versie te gebruiken.",
+    "updateNow": "Nu updaten",
+    "later": "Later"
   }
 }
