fix: Ontbrekende vertaalsleutel companies.allCompanies toegevoegd
- companies.allCompanies key toegevoegd aan nl.json en en.json
- Dropdown menu's in Drivers en Fleet pagina's worden nu correct vertaald

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -231,7 +231,8 @@
     "contactDetails": "Contact details",
     "companyCreated": "Company successfully created",
     "companyUpdated": "Company successfully updated",
-    "companyDeleted": "Company successfully deleted"
+    "companyDeleted": "Company successfully deleted",
+    "allCompanies": "All companies"
   },
   "drivers": {
     "title": "Drivers",
