fix: Themanamen vertaalbaar gemaakt in ThemeSelector
- Theme.name gewijzigd naar Theme.nameKey voor vertaalsleutels
- ThemeSelector gebruikt nu t(theme.nameKey) voor vertalingen
- themes sectie toegevoegd aan nl.json en en.json
- Alle 8 thema's nu correct vertaald (NL/EN)

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -1191,5 +1191,15 @@
     "newVersionAvailable": "A new version of TMS is available. Reload to use the latest version.",
     "updateNow": "Update now",
     "later": "Later"
+  },
+  "themes": {
+    "default": "Default (Blue)",
+    "emerald": "Emerald (Green)",
+    "violet": "Violet (Purple)",
+    "amber": "Amber (Orange)",
+    "rose": "Rose (Pink)",
+    "cyan": "Cyan (Turquoise)",
+    "slate": "Slate (Dark)",
+    "dark": "Dark Mode"
   }
 }
